tests/code/pass/pass_int_initialization_list_const.u
entrypoint: ~()->(i64{27})
{
}