tests/code/fail/fail_accessing_non_existant_local_variable.u
entrypoint: ~()->(i64{1})
{
	foo:i64{bogus};
}
